--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1>SESI-SENAI</h1>
     <h3>escola de formaçâo técnica</h3>
+    <p>
+        o SENAI está neste momento com uma parceria com o SESI</p>
     
 </body>
 </html>
